# web-app-skeleton

./: .gitignore  Makefile  README.md  docker-compose.yml  sample.env  tsconfig.json
src/backend/: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  gunicorn_conf.py  mypy.ini  requirements.txt  sample.env  setup.cfg  setup.py
src/backend/app/: __main__.py  main.py
src/backend/app/api/: __init__.py  common.py  utils.py
src/backend/app/api/v1/: __init__.py  api.py
src/backend/app/api/v1/endpoints/: __init__.py  auth.py  roles.py  users.py
src/backend/app/cli/: __init__.py  core.py  settings.py  utils.py
src/backend/app/core/: config.py  email.py  security.py
src/backend/app/crud/: __init__.py  base.py  core.py
src/backend/app/crud/models/: __init__.py  base.py  name.py  role.py  user.py
src/backend/app/crud/repos/: __init__.py  base.py  name.py  role.py  user.py
src/backend/app/drivers/: __init__.py  utils.py
src/backend/app/drivers/sqlalchemy/: __init__.py  core.py  crud.py  session.py  utils.py
src/backend/app/drivers/sqlalchemy/models/: __init__.py  base.py  name.py  role.py  user.py
src/backend/app/drivers/sqlalchemy/repos/: __init__.py  name.py  role.py  (+1 more)
src/backend/app/schema/: __init__.py  base.py  message.py  msg.py  name.py  role.py  token.py  user.py
src/backend/app/tests/: __init__.py  conftest.py  utils.py
src/backend/app/tests/api/: __init__.py
src/backend/app/utils/: __init__.py  enumutils.py  importutils.py  strutils.py
src/backend/scripts/: prestart.sh  start.sh
src/backend/tests/: __init__.py
(+81 files in other folders)
