[metadata]
description = A backend skeleton API for modern web applications.
author = Douglas Daly
author_email = contact@douglasdaly.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords =
    api
    web application
classifier =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --mypy -ra
norecursedirs =
    .*
    *.egg
    {arch}
    build
    CVS
    dist
testpaths = app/tests

[coverage:run]
branch = False
omit =
    setup.py
    tests/

[coverage:report]
ignore_errors = False
show_missing = True
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:
